Fixed spacing between filters and food listings when in mobile mode.

--- a/client/src/app/receiver/receiver.component.css
+++ b/client/src/app/receiver/receiver.component.css
@@ -35,11 +35,15 @@
         right: 100%;
         background: white;
         width: 100%;
-        max-width: 400px;
+        max-width: 500px;
     }
 
     #filters-button {
         visibility: visible;
         opacity: 0.67;
+    }
+
+    #food-listings {
+        margin-left: 40px;
     }
 }
